# horologium

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
data/: litellm-anthropic-pricing.json
docs/: intro.md  roadmap.md
scripts/: gen-pricing.py
src/: git.rs  main.rs  status.rs
src/stat/: aggregate.rs  format.rs  mod.rs  pricing.rs  record.rs  walker.rs
test-fixtures/: sample.json
tests/parity/: README.md  known-diffs.md  run.sh
tests/parity/fixtures/: 02-basic.json  03-rate-green.json  04-rate-yellow.json  05-rate-red.json  06-ties-rounding.json  07-utf8-dir.json  08-git-branch.json  09-only-5h.json  10-only-7d.json
tests/parity/snapshots/: 01-empty.all.snap  01-empty.hyperlinks.snap  02-basic.all.snap  02-basic.default.snap  02-basic.hyperlinks.snap  02-basic.multiline.snap  02-basic.powerline.snap  03-rate-green.all.snap  03-rate-green.default.snap  03-rate-green.hyperlinks.snap  03-rate-green.multiline.snap  03-rate-green.powerline.snap  04-rate-yellow.all.snap  04-rate-yellow.default.snap  04-rate-yellow.hyperlinks.snap  04-rate-yellow.multiline.snap  04-rate-yellow.powerline.snap  05-rate-red.all.snap  05-rate-red.default.snap  05-rate-red.hyperlinks.snap  05-rate-red.multiline.snap  05-rate-red.powerline.snap  06-ties-rounding.all.snap  06-ties-rounding.default.snap  06-ties-rounding.hyperlinks.snap  06-ties-rounding.multiline.snap  06-ties-rounding.powerline.snap  07-utf8-dir.all.snap  07-utf8-dir.default.snap  07-utf8-dir.hyperlinks.snap  07-utf8-dir.multiline.snap  07-utf8-dir.powerline.snap  08-git-branch.all.snap  08-git-branch.default.snap  08-git-branch.hyperlinks.snap  (+12 more)
