[package]
name = "horologium"
version = "1.1.0"
edition = "2021"
rust-version = "1.77"
description = "Unified Claude Code status line and usage analytics in a single fast binary"
license = "MIT"
repository = "https://github.com/Shallow-dusty/horologium"
readme = "README.md"
keywords = ["claude-code", "statusline", "cli", "usage", "tui"]
categories = ["command-line-utilities"]

[[bin]]
name = "horologium"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
owo-colors = "4"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
